@@ -2202,8 +2202,6 @@ internal.monitor.MONITOR_MEDIUM_ACTIVE=Medium priority tasks currently running
 internal.monitor.MONITOR_MEDIUM_WAITING=Medium priority tasks queued
 internal.monitor.MONITOR_LOW_ACTIVE=Low priority tasks currently running
 internal.monitor.MONITOR_LOW_WAITING=Low priority tasks queued
-internal.monitor.MONITOR_STACK_HEIGHT=Maximum thread stack height
-internal.monitor.MONITOR_THREAD_COUNT=Active thread count
 internal.monitor.DB_ACTIVE_CONNECTIONS=Active database connections
 internal.monitor.DB_IDLE_CONNECTIONS=Idle database connections
 internal.monitor.BATCH_WRITE_SPEED_MONITOR=Writes per second during database batches
